browse UI fixes 	- hide orderBy form on albumpopup as forms override floating divs (grr) 	- IE hacks to support album popup on IE6 	- fix resizing issue on IE in the album popup 	- fix an issue when track id = album id in the tree UI 	- fix an issue Herger found when opening multiple sub folders in tree UI.
git-svn-id: file:///home/awy/mirror/slim/trunk/server@11562 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Default/slimserver.css
+++ b/HTML/Default/slimserver.css
@@ -23,14 +23,16 @@ body {
 	font-size: 11px;
 }
 
-.viewSelect
+#viewSelect
 {
-	float: right;
+	position: absolute;
+	top: 115px;
+	right: 15px;
 	padding-right: 8px;
 	padding-top: 6px;
 }
 
-.viewSelect img {
+#viewSelect img {
 	vertical-align: middle;
 }
 
@@ -509,10 +511,10 @@ div#playList #browsedbHeader {
 div#albumPopup {
 	position: fixed;
 	z-index: 90;
-	top: 96px;
+	top: 10%;
 	left: 15%;
 	width: 70%;
-	bottom: 10%;
+	max-height: 70%;
 	background-color: white;
 	color: black;
 	padding: 5px;
